# agent-sre

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/canary-deploy/: README.md  action.yml  canary.py
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_delivery.py
benchmarks/results/: BENCHMARKS.md
docs/: comparison.md  concepts.md  deployment.md  integration-guide.md  security.md
examples/: canary_rollout.py  chaos_test.py
examples/dashboard/: README.md  app.py
src/agent_sre/: __init__.py  providers.py
src/agent_sre/adapters/: __init__.py
src/agent_sre/alerts/: __init__.py  dedup.py
src/agent_sre/anomaly/: strategies.py
src/agent_sre/cli/: main.py
tests/: test_adapters.py  test_alert_dedup.py  test_alerts.py  test_api.py  test_arize.py  test_benchmarks.py  test_blue_green.py  test_braintrust.py  test_cascade.py  test_certification.py  test_chaos_scheduler.py  test_cost_optimizer.py  test_datadog.py  test_evals.py  test_experiments.py  test_fleet.py  test_golden_traces.py  test_helicone.py  test_k8s.py  test_langchain_callback.py  test_langfuse.py  test_langsmith.py  test_llamaindex.py  test_mcp_drift.py  test_mcp_server.py  test_otel.py  test_prometheus.py  test_protocol_tracing.py  test_runbooks.py  test_slo_templates.py  test_tracing.py  test_wandb_mlflow.py
tests/integration/: test_integration.py  test_scenarios.py
tests/unit/: test_adversarial_chaos.py  test_anomaly_detection.py  test_chaos.py  test_circuit_breaker.py  test_dashboard.py  test_delivery.py  test_engine.py  test_integrations.py  test_objectives.py  test_p2_features.py  test_visualization.py
(+73 files in other folders)
