[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-sre"
version = "0.1.0"
description = "Reliability Engineering for AI Agent Systems"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Imran Siddique" },
]
keywords = ["ai", "agents", "sre", "reliability", "observability", "slo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pydantic>=2.0",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "mypy>=1.10",
]
otel = [
    "opentelemetry-exporter-otlp>=1.20",
]

[project.urls]
Homepage = "https://github.com/imran-siddique/agent-sre"
Repository = "https://github.com/imran-siddique/agent-sre"
Issues = "https://github.com/imran-siddique/agent-sre/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_sre"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["agent_sre"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
